--- a/app/components/users/user.dashboard.html
+++ b/app/components/users/user.dashboard.html
@@ -1,78 +1,94 @@
-<div class="row">
-    <div class="col-lg-12">
-        <div class="hpanel hgreen">
-            <div class="panel-body">
-                <div class="row">
-                    <div class="col-sm-9">
-                        <div style="padding-bottom: 20px;">
-                            <div style="float: left; padding-right:20px;">
-                                <img class="img-circle m-b" style="height:75px;" ng-src="{{profile.user.profile.linkedin.pictureUrl || profile.user.profile.avatar || 'images/blank_avatar.png'}}" alt="{{::profile.user.profile.name}}">
-                            </div>
-                            <div style="margin-right: -15px;">
-                                <div class="btn-group pull-right">
-                                    <a ng-click="profile.contact(nav.location.key)" title="Contact {{item.value.profile.name}}" class="pull-left" style="padding-right: 8px;">
-                                        <i class="pe-7s-mail" style="font-size: 24px; opacity: .45;"></i></a>
-                                    <a href="{{::profile.user.profile.linkedin.publicProfileUrl}}" target="_blank"><i class="fa fa-linkedin btn btn-default btn-xs"></i>
-                                    </a>
-                                </div>
-                            </div>
-                            <h3 style="padding-top: 5px;">{{::profile.user.profile.name | words:0}} {{::profile.user.profile.name |
-                                words:1}} {{::profile.user.profile.name | words:2}}
-                            </h3>
-                            <h4>
-                                {{::profile.user.profile.linkedin.headline}}
-                            </h4>
-                        </div>
-
-                        <div class="row" style="float: left;">
-                            <div class="no-overflow profile-div" ng-if="profile.user.roles.leader">
-                                <ul class="profile-ul">
-                                    <p style="font-size: 14px; padding: 2px 5px 0 20px; float: left;">Leader:</p>
-                                    <li ng-repeat="(key, val) in profile.user.roles.leader" class="profile-roles">
-                                        <a ui-sref="community.dashboard({location_path: key, community: profile.communities[key], query: &quot;&#42;&quot;})" class="btn btn-xs btn-outline" ng-class="{'btn-danger' : profile.communities[key].type == 'company', 'btn-info' : profile.communities[key].type == 'network', 'btn-primary' : profile.communities[key].type == 'cluster', 'btn-success' : profile.communities[key].type == 'location'}"><i class="fa {{profile.communities[key].profile.icon}}"></i> {{profile.communities[key].profile.name}}</a>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="no-overflow profile-div" ng-if="profile.user.roles.founder">
-                                <ul class="profile-ul">
-                                    <p style="font-size: 14px; padding: 2px 5px 0 20px; float: left;">Founder:</p>
-                                    <li ng-repeat="(key, val) in profile.user.roles.founder" class="profile-roles">
-                                        <a ui-sref="community.dashboard({location_path: key, community: profile.communities[key], query: &quot;&#42;&quot;})" class="btn btn-xs btn-outline" ng-class="{'btn-danger' : profile.communities[key].type == 'company', 'btn-info' : profile.communities[key].type == 'network', 'btn-primary' : profile.communities[key].type == 'cluster', 'btn-success' : profile.communities[key].type == 'location'}"><i class="fa {{profile.communities[key].profile.icon}}"></i> {{profile.communities[key].profile.name}}</a>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="no-overflow profile-div" ng-if="profile.user.roles.investor">
-                                <ul class="profile-ul">
-                                    <p style="font-size: 14px; padding: 2px 5px 0 20px; float: left;">Investor:</p>
-                                    <li ng-repeat="(key, val) in profile.user.roles.investor" class="profile-roles">
-                                        <a ui-sref="community.dashboard({location_path: key, community: profile.communities[key], query: &quot;&#42;&quot;})" class="btn btn-xs btn-outline" ng-class="{'btn-danger' : profile.communities[key].type == 'company', 'btn-info' : profile.communities[key].type == 'network', 'btn-primary' : profile.communities[key].type == 'cluster', 'btn-success' : profile.communities[key].type == 'location'}"><i class="fa {{profile.communities[key].profile.icon}}"></i> {{profile.communities[key].profile.name}}</a>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div ng-if="profile.user.roles.mentor">
-                                <ul class="profile-ul">
-                                    <p style="font-size: 14px; padding: 2px 5px 0 20px; float: left;">Mentor:</p>
-                                    <li ng-repeat="(key, val) in profile.user.roles.mentor" class="profile-roles">
-                                        <a ui-sref="community.dashboard({location_path: key, community: profile.communities[key], query: &quot;&#42;&quot;})" class="btn btn-xs btn-outline" ng-class="{'btn-danger' : profile.communities[key].type == 'company', 'btn-info' : profile.communities[key].type == 'network', 'btn-primary' : profile.communities[key].type == 'cluster', 'btn-success' : profile.communities[key].type == 'location'}"><i class="fa {{profile.communities[key].profile.icon}}"></i> {{profile.communities[key].profile.name}}</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-
-                    </div>
-                    <div class="col-xs-12 col-sm-3 project-info">
-                        <gm-map id="profile-map" gm-address="{address:profile.user.profile.home}" options="{zoom: 11, disableDefaultUI: true}">
-                        </gm-map>
-                    </div>
+<header id="page-top">
+    <div class="hero">
+        <div class="container">
+            <div>
+                <header class="heading content" style="color:#fff">
+                    <img class="img-circle m-b" style="height:75px;" ng-src="{{profile.user.profile.linkedin.pictureUrl || profile.user.profile.avatar || 'images/blank_avatar.png'}}" alt="{{::profile.user.profile.name}}">
+                    <h1>
+                        {{::profile.user.profile.linkedin.headline}}
+                    </h1>
+                    <h3 style="padding-top: 5px;" style="line-height: 1.5;">
+                        My name is <span class="name">{{::profile.user.profile.name | words:0}} {{::profile.user.profile.name |
+                        words:1}} {{::profile.user.profile.name | words:2}}</span>, <span ng-bind-html="::profile.user.profile.linkedin.summary | sentence | linky:'_blank'"></span>
+                    </h3>
+                    <a href="#" class="btn btn-success btn-sm">Learn more</a>
+                </header>
+                <div class="heading-image" animate-panel child="img-animate" effect="fadeInRight">
+                    <p class="small">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                 </div>
             </div>
-            <div ng-show="profile.user.profile.linkedin.summary" class="panel-footer">
-                <h3>Summary</h3>
-                <p style="white-space:pre-wrap;" ng-bind-html="::profile.user.profile.linkedin.summary | linky:'_blank'"></p>
-                <hr>
-                <h3 ng-show="profile.user.profile.skills">Skills & Industries</h3>
-                <li ng-repeat="skill in profile.user.profile.skills" class="label btn-default skills"><a href="#" ui-sref="search.dashboard({location_path: nav.location.key, community: nav.location, query: skill})">{{::skill}}</a></li>
-            </div>
         </div>
+        <span><div id="cover-photo" class="active" style="background-image: url(https://s3-us-west-1.amazonaws.com/wiselike/uploads/background/cropped/upload_167c2ba1ec29e54c46b52b64ff0b16e1.jpg);"></div><span class="cover-overlay"></span></span>
     </div>
+</header>
+
+
+<div class="content-tab-wrapper">
+
+    <!-- BEGIN Nav tabs -->
+    <ul class="nav nav-tabs" role="tablist">
+        <li><a href="#ask" aria-controls="ask" role="tab" data-toggle="tab" aria-expanded="false"><span class="pe-7s-micro"></span>Ask a Question</a></li>
+        <li><a href="#leader" aria-controls="leader" role="tab" data-toggle="tab" aria-expanded="false"><span class="pe-7s-flag"></span>Leader</a></li>
+        <li><a href="#founder" aria-controls="founder" role="tab" data-toggle="tab" aria-expanded="false"><span class="pe-7s-paper-plane"></span>Founder</a></li>
+        <li><a href="#investor" aria-controls="investor" role="tab" data-toggle="tab" aria-expanded="false"><span class="pe-7s-gleam"></span>Investor</a></li>
+        <li class="active"><a href="#mentor" aria-controls="mentor" role="tab" data-toggle="tab" aria-expanded="true"><span class="pe-7s-study"></span>Mentor</a></li>
+        <li><a href="#team" aria-controls="team" role="tab" data-toggle="tab" aria-expanded="true"><span class="pe-7s-ball"></span>Team Member</a></li>
+        <li><a href="#provider" aria-controls="provider" role="tab" data-toggle="tab" aria-expanded="true"><span class="pe-7s-portfolio"></span>Service Provider</a></li>
+    </ul>
+    <!--/ END Nav tabs -->
+
+
+    <!-- BEGIN Tab panes -->
+    <div class="tab-content">
+
+
+
+        <div role="tabpanel" class="tab-pane fade bg-light" id="first">
+
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <h2><span class="text-success">UI components </span>for your app</h2>
+                            <p>Lorem Ipsum available, but the majority have suffered alteration euismod. </p>
+                        </div>
+                    </div>
+
+                </div>
+        </div> <!-- First Tab Pane -->
+
+        <div role="tabpanel" class="tab-pane fade" id="second">
+            <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
+
+            <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+
+            <a href="#0" class="more">Read More</a>
+        </div> <!-- Second Tab Pane -->
+
+        <div role="tabpanel" class="tab-pane fade" id="third">
+            <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
+
+            <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+
+            <a href="#0" class="more">Read More</a>
+        </div> <!-- Third Tab Pane -->
+
+        <div role="tabpanel" class="tab-pane fade" id="fourth">
+            <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
+
+            <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+
+            <a href="#0" class="more">Read More</a>
+        </div> <!-- Fourth Tab Pane -->
+
+        <div role="tabpanel" class="tab-pane fade active in" id="fifth">
+            <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
+
+            <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+
+            <a href="#0" class="more">Read More</a>
+        </div> <!-- Fifth Tab Pane -->
+
+    </div>
+    <!--/ END Tab panes -->
+
 </div>
