--- a/app/less/various.less
+++ b/app/less/various.less
@@ -8,6 +8,174 @@
   display: block;
 }
 
+// for user profile hero page
+
+.hero {
+  background: #1b3e4f;
+  background: -moz-linear-gradient(-45deg,#1b3e4f 0,#123b57 100%);
+  background: -webkit-gradient(linear,left top,right bottom,color-stop(0,#1b3e4f),color-stop(100%,#123b57));
+  background: -webkit-linear-gradient(-45deg,#1b3e4f 0,#123b57 100%);
+  background: -o-linear-gradient(-45deg,#1b3e4f 0,#123b57 100%);
+  background: -ms-linear-gradient(-45deg,#1b3e4f 0,#123b57 100%);
+  background: linear-gradient(135deg,#1b3e4f 0,#123b57 100%);
+  text-align: center;
+  position: relative;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.hero .content {
+  padding: 0 30px;
+  max-width: 50ex;
+  font-size: 34px;
+  z-index: 10;
+  position: relative;
+}
+
+.cover-overlay {
+  background: -moz-linear-gradient(-45deg,rgba(18,43,53,.7) 0,rgba(14,44,63,.7) 100%);
+  background: -webkit-gradient(linear,left top,right bottom,color-stop(0,rgba(18,43,53,.7)),color-stop(100%,rgba(14,44,63,.7)));
+  background: -webkit-linear-gradient(-45deg,rgba(18,43,53,.7) 0,rgba(14,44,63,.7) 100%);
+  background: -o-linear-gradient(-45deg,rgba(18,43,53,.7) 0,rgba(14,44,63,.7) 100%);
+  background: -ms-linear-gradient(-45deg,rgba(18,43,53,.7) 0,rgba(14,44,63,.7) 100%);
+  background: linear-gradient(135deg,rgba(18,43,53,.7) 0,rgba(14,44,63,.7) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#b3122b35', endColorstr='#b30e2c3f', GradientType=1);
+  -khtml-user-select: none;
+  user-select: none;
+  cursor: default;
+}
+
+#cover-photo, .cover-overlay {
+  top: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  position: absolute;
+  display: block;
+  z-index: 5;
+}
+
+.cover-edit header, .cover-overlay {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -webkit-touch-callout: none;
+}
+
+#cover-photo {
+  position: absolute;
+  background-position: center;
+  background-size: cover;
+  z-index: 2;
+  opacity: 0;
+}
+
+#cover-photo.active {
+  opacity: 1;
+  -webkit-transition: opacity ease-in-out .62s 0s;
+  -moz-transition: opacity ease-in-out .62s 0s;
+  -o-transition: opacity ease-in-out .62s 0s;
+  transition: opacity ease-in-out .62s 0s;
+}
+
+.name {
+  background-image: -moz-linear-gradient(top,transparent 50%,#FFF 50%);
+  background-image: -webkit-linear-gradient(top,rgba(0, 0, 0, 0) 50%,#FFF 50%);
+  background-image: -o-linear-gradient(top,transparent 50%,#FFF 50%);
+  background-image: linear-gradient(to bottom,rgba(0, 0, 0, 0) 50%,#FFF 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 2px;
+  background-position: 0 25px;
+  text-decoration: none;
+}
+
+/* profile page content tabs */
+.content-tab-wrapper .nav-tabs {
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: flex;
+  border-bottom: 1px solid rgba(25, 169, 229, 0.63);
+  -ms-box-orient: horizontal;
+  -ms-box-pack: center;
+  -webkit-flex-flow: row wrap;
+  -moz-flex-flow: row wrap;
+  -ms-flex-flow: row wrap;
+  flex-flow: row wrap;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+}
+
+.content-tab-wrapper .nav-tabs > li > a {
+  color: #777;
+}
+
+.content-tab-wrapper .nav-tabs > li > a:hover {
+  padding: 11px 21px;
+  border: none;
+  background: none;
+  color: #222;
+}
+
+.content-tab-wrapper .nav-tabs > li.active > a,
+.content-tab-wrapper .nav-tabs > li.active > a:focus,
+.content-tab-wrapper .nav-tabs > li.active > a:hover {
+  padding: 11px 21px;
+  border: none;
+  background: none;
+  color: #222;
+}
+
+.content-tab-wrapper .nav > li > a {
+  padding: 10px 20px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  -webkit-transition: color .25s;
+  transition: color .25s;
+}
+
+.content-tab-wrapper .nav-tabs > li.active:before,
+.content-tab-wrapper .nav-tabs > li.active:after {
+  position: absolute;
+  top: 99%;
+  left: 50%;
+  width: 0;
+  height: 0;
+  border: solid rgba(0, 0, 0, 0);
+  content: '';
+  pointer-events: none;
+}
+
+.content-tab-wrapper .nav > li > a span[class^="pe-"] {
+  display: block;
+  margin-bottom: 10px;
+  text-align: center;
+  font-size: 20px;
+}
+
+.content-tab-wrapper .nav > li.active > a span[class^="pe-"] {
+  color: #19a9e5;
+}
+
+.content-tab-wrapper .nav-tabs > li.active:before {
+  margin-left: -11px;
+  border-width: 11px;
+  border-top-color: #19a9e5;
+}
+
+.content-tab-wrapper .nav-tabs > li.active:after {
+  margin-left: -10px;
+  border-width: 10px;
+  border-top-color: #f7f8f9;
+}
+
+.tab-content {
+  margin-top: 34px;
+}
+
 // for alerts
 .close {
   font-size: 16px;
