--- a/app/components/networks/networks.list.html
+++ b/app/components/networks/networks.list.html
@@ -1,102 +1,195 @@
-<div>
-    <div class="row">
-        <div ng-if="!$state.includes('search.*') && !nav.embedded" class="col-lg-2 col-md-3 col-sm-4">
-            <!-- Navigation Block -->
-            <div class="hpanel hgreen">
-                <div class="panel-footer top" style="font-size: 17px;">
-                    <strong>Stage</strong> Filters
-                    <div loading-bars ng-show="users.loadingStage" style="display: inline;"></div>
+<div class="row">
+    <div class="col-xs-12 col-sm-6">
+        <div class="hpanel hnavyblue" >
+            <div class="panel-body" style="padding: 10px 5px;">
+                <div class="col-xs-8">
+                    <div class="stats-title pull-left">
+                        <a ui-sref="{{'user.list' + nav.nav_url}}">
+                            <h3>Accelerators</h3>
+                            <h1 class="text-info">{{profile.team.count.founder}}</h1>
+                        </a>
+                    </div>
                 </div>
-                <div class="panel-body filternav">
-
-                    <ul class="panel-list">
-                        <li ng-class="{'active':companies.selectedStage.indexOf('*') >= 0}" ng-click="companies.filterStage('*')">
-                            <a>
-                                <i class="fa fa-fw fa-globe themed-color-dark"></i> <strong>All</strong>
-                            </a>
-                        </li>
-                        <li>
-                            <hr style="margin: 10px 0 10px 0;">
-                        </li>
-                        <li ng-class="{'active':companies.selectedStage.indexOf('Bootstrap') >= 0}" ng-click="companies.filterStage('Bootstrap')">
-                            <a>
-                                Bootstrap
-                            </a>
-                        </li>
-                        <li ng-class="{'active':companies.selectedStage.indexOf('Seed') >= 0}" ng-click="companies.filterStage('Seed')">
-                            <a>
-                                Seed / Angel
-                            </a>
-                        </li>
-                        <li ng-class="{'active':companies.selectedStage.indexOf('Series A') >= 0}" ng-click="companies.filterStage('Series A')">
-                            <a>
-                                Series A
-                            </a>
-                        </li>
-                        <li ng-class="{'active':companies.selectedStage.indexOf('Series B') >= 0}" ng-click="companies.filterStage('Series B')">
-                            <a>
-                                Series B
-                            </a>
-                        </li>
-                        <li ng-class="{'active':companies.selectedStage.indexOf('Later') >= 0}" ng-click="companies.filterStage('Later')">
-                            <a>
-                                Later Stage
-                            </a>
-                        </li>
-                    </ul>
+                <div class="col-xs-4">
+                    <div class="stats-icon pull-right">
+                        <i class="pe-7s-next fa-4x"></i>
+                    </div>
                 </div>
             </div>
-
-            <div class="hpanel hnavyblue">
-                <div class="panel-footer top" style="font-size: 17px;">
-                    <strong>Industry</strong> Filters
-                    <div loading-bars ng-show="companies.loadingCluster" style="display: inline;"></div>
-                </div>
-                <div class="panel-body filternav">
-                    <ul class="panel-list">
-                        <li ng-if="companies.community.type !== 'cluster'" ng-init="companies.allClusters=true" ng-class="{'active':companies.allClusters}" ng-click="companies.loadingCluster=true; companies.allClusters=true; companies.filterClusters();">
-                            <a><i class="fa fa-fw fa-globe themed-color-dark icon-push"></i> All</a>
-                        </li>
-                        <li ng-if="companies.community.type == 'cluster'" class="active">
-                            <a><i class="fa fa-fw fa-globe themed-color-dark icon-push"></i> {{companies.community.profile.name}}</a>
-                        </li>
-                        <hr style="margin: 10px 0 10px 0;">
-                        <li ng-if="companies.community.type !== 'cluster'" ng-repeat="cluster in nav.top.parents" ng-class="{'active':companies.selectedClusters.indexOf(cluster.label) >= 0}" ng-click="companies.loadingCluster=true;  companies.allClusters=false; companies.filterClusters(cluster.label);">
-                            <a>{{cluster.label[0].toUpperCase() + cluster.label.slice(1)}}</a>
-                        </li>
-                    </ul>
+            <div class="panel-footer" style="background: #fff;">
+                <div ng-repeat="item in profile.team.founder">
+                    <div style="margin-right: -2px; margin-bottom:-5px;">
+                        <div ng-if="$first" style="padding-top:5px;"></div>
+                        <div class="row" ng-include="'components/users/user.list.item.html'" style="margin-right: -14px; margin-bottom: 1px;"></div>
+                        <div ng-if="$last" style="margin-bottom:-32px;"></div>
+                    </div>
                 </div>
             </div>
         </div>
-
-
-
-        <div ng-class="{'col-lg-10 col-md-9 col-sm-8' : !$state.includes('search.*') && !nav.embedded}" style="padding-left: 15px; padding-right: 15px;">
-
-            <div class="hpanel">
-                <div class="panel-body content">
-                    <h3>{{networks.pageTitle}}</h3>
-                    <div class="row">
-                        <td style="border-bottom: 1px solid #fff; border-top: none; padding: 0;" colspan="3"></td>
-                    </div>
-                    <div ng-show="companies.tag" style="text-align: center" ng-cloak><h2><br/>Searching for {{companies.tag}}..</h2><br/><br/></div>
-                    <div ng-show="companies.companies.results.length == 0" style="text-align: center" ng-cloak><h2><br/>Nothing here!</h2><br/><br/></div>
-                    <div ng-repeat="item in companies.companies.results" ng-switch on="$index % 2" style="margin-top: 10px;">
-                        <div class="col-md-6" ng-switch-when="0">
-                            <div class="row"  ng-include="'components/companies/company.list.item.html'"></div>
-                        </div>
-                        <div class="col-md-6" ng-switch-when="1">
-                            <div class="row"  ng-include="'components/companies/company.list.item.html'"></div>
-                        </div>
+    </div>
+    <div class="col-xs-12 col-sm-6">
+        <div class="hpanel hblue" >
+            <div class="panel-body" style="padding: 10px 5px;">
+                <div class="col-xs-8">
+                    <div class="stats-title pull-left">
+                        <a ui-sref="{{'user.list' + nav.nav_url}}">
+                            <h3>Colleges</h3>
+                            <h1 class="text-info">{{profile.team.count.investor}}</h1>
+                        </a>
                     </div>
                 </div>
-                <div class="panel-footer" style="height:45px;">
-                    <div class="pull-right">
-                        <strong>{{companies.companies.start}} - {{companies.companies.end}}</strong> of <strong>{{companies.companies.total_count}}&nbsp;&nbsp;</strong>
-                        <div class="btn-group btn-group-sm" style="margin-top: -2px;">
-                            <span ng-if="companies.companies.prev"><a ng-click="companies.searchCompanies(companies.companies.prev)" class="btn btn-sm btn-default" style="background-color: #fff;"><i class="fa fa-angle-left"></i></a></span>
-                            <span ng-if="companies.companies.next"><a ng-click="companies.searchCompanies(companies.companies.next)" class="btn btn-sm btn-default" style="background-color: #fff;"><i class="fa fa-angle-right"></i></a></span>
-                        </div>
+                <div class="col-xs-4">
+                    <div class="stats-icon pull-right">
+                        <i class="pe-7s-culture fa-4x"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="panel-footer" style="background: #fff;">
+                <div ng-repeat="item in profile.team.investor">
+                    <div style="margin-right: -2px; margin-bottom:-5px;">
+                        <div ng-if="$first" style="padding-top:5px;"></div>
+                        <div class="row" ng-include="'components/users/user.list.item.html'" style="margin-right: -14px; margin-bottom: 1px;"></div>
+                        <div ng-if="$last" style="margin-bottom:-32px;"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-xs-12 col-sm-6">
+        <div class="hpanel hviolet" >
+            <div class="panel-body" style="padding: 10px 5px;">
+                <div class="col-xs-8">
+                    <div class="stats-title pull-left">
+                        <a ui-sref="{{'user.list' + nav.nav_url}}">
+                            <h3>Coworking</h3>
+                            <h1 class="text-info">{{profile.team.count.team}}</h1>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-xs-4">
+                    <div class="stats-icon pull-right">
+                        <i class="pe-7s-plug fa-4x"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="panel-footer" style="background: #fff;">
+                <div ng-repeat="item in profile.team.team">
+                    <div style="margin-right: -2px; margin-bottom:-5px;">
+                        <div ng-if="$first" style="padding-top:5px;"></div>
+                        <div class="row" ng-include="'components/users/user.list.item.html'" style="margin-right: -14px; margin-bottom: 1px;"></div>
+                        <div ng-if="$last" style="margin-bottom:-32px;"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-xs-12 col-sm-6">
+        <div class="hpanel hnavyblue" >
+            <div class="panel-body" style="padding: 10px 5px;">
+                <div class="col-xs-8">
+                    <div class="stats-title pull-left">
+                        <a ui-sref="{{'user.list' + nav.nav_url}}">
+                            <h3>Incubators</h3>
+                            <h1 class="text-info">{{profile.team.count.mentor}}</h1>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-xs-4">
+                    <div class="stats-icon pull-right">
+                        <i class="pe-7s-light fa-4x"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="panel-footer" style="background: #fff;">
+                <div ng-repeat="item in profile.team.mentor">
+                    <div style="margin-right: -2px; margin-bottom:-5px;">
+                        <div ng-if="$first" style="padding-top:5px;"></div>
+                        <div class="row" ng-include="'components/users/user.list.item.html'" style="margin-right: -14px; margin-bottom: 1px;"></div>
+                        <div ng-if="$last" style="margin-bottom:-32px;"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-xs-12 col-sm-6">
+        <div class="hpanel hgreen" >
+            <div class="panel-body" style="padding: 10px 5px;">
+                <div class="col-xs-8">
+                    <div class="stats-title pull-left">
+                        <a ui-sref="{{'user.list' + nav.nav_url}}">
+                            <h3>Investment</h3>
+                            <h1 class="text-info">{{profile.team.count.provider}}</h1>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-xs-4">
+                    <div class="stats-icon pull-right">
+                        <i class="pe-7s-gleam fa-4x"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="panel-footer" style="background: #fff;">
+                <div ng-repeat="item in profile.team.provider">
+                    <div style="margin-right: -2px; margin-bottom:-5px;">
+                        <div ng-if="$first" style="padding-top:5px;"></div>
+                        <div class="row" ng-include="'components/users/user.list.item.html'" style="margin-right: -14px; margin-bottom: 1px;"></div>
+                        <div ng-if="$last" style="margin-bottom:-32px;"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-xs-12 col-sm-6">
+        <div class="hpanel hviolet" >
+            <div class="panel-body" style="padding: 10px 5px;">
+                <div class="col-xs-8">
+                    <div class="stats-title pull-left">
+                        <a ui-sref="{{'user.list' + nav.nav_url}}">
+                            <h3>Meetups</h3>
+                            <h1 class="text-info">{{profile.team.count.provider}}</h1>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-xs-4">
+                    <div class="stats-icon pull-right">
+                        <i class="pe-7s-coffee fa-4x"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="panel-footer" style="background: #fff;">
+                <div ng-repeat="item in profile.team.provider">
+                    <div style="margin-right: -2px; margin-bottom:-5px;">
+                        <div ng-if="$first" style="padding-top:5px;"></div>
+                        <div class="row" ng-include="'components/users/user.list.item.html'" style="margin-right: -14px; margin-bottom: 1px;"></div>
+                        <div ng-if="$last" style="margin-bottom:-32px;"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-xs-12 col-sm-6">
+        <div class="hpanel hblue" >
+            <div class="panel-body" style="padding: 10px 5px;">
+                <div class="col-xs-8">
+                    <div class="stats-title pull-left">
+                        <a ui-sref="{{'user.list' + nav.nav_url}}">
+                            <h3>Mentorship</h3>
+                            <h1 class="text-info">{{profile.team.count.provider}}</h1>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-xs-4">
+                    <div class="stats-icon pull-right">
+                        <i class="pe-7s-study fa-4x"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="panel-footer" style="background: #fff;">
+                <div ng-repeat="item in profile.team.provider">
+                    <div style="margin-right: -2px; margin-bottom:-5px;">
+                        <div ng-if="$first" style="padding-top:5px;"></div>
+                        <div class="row" ng-include="'components/users/user.list.item.html'" style="margin-right: -14px; margin-bottom: 1px;"></div>
+                        <div ng-if="$last" style="margin-bottom:-32px;"></div>
                     </div>
                 </div>
             </div>
